[tool.poetry]
name = "docs-theme-demo"
version = "0.1.0"
description = "Demonstrate how to use MkDocs and Siemens docs-theme"
authors = ["Code Ops <ops.code.ch@siemens.com>"]
license = "Siemens Inner Source License 1.4"

[[tool.poetry.source]]
name = "mkdocs"
url = "https://code.siemens.com/api/v4/projects/64538/packages/pypi/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-code-siemens-code-docs-theme = {version = "^6.2.0", allow-prereleases = true, source = "mkdocs"}
plantuml-markdown = "^3.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
